Fix overlap between selection and hover states.

--- a/client/components/stats-interval-dropdown/style.scss
+++ b/client/components/stats-interval-dropdown/style.scss
@@ -49,6 +49,10 @@
 	&:hover {
 		background-color: var(--color-primary-0);
 	}
+	& + & {
+		// Prevent overlap between outline and hover.
+		margin-top: 2px;
+	}
 	&.is-selected {
 		background-color: var(--color-accent-5);
 	}
